2008-11-29  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/uprobes.exp: Simplify -p5 test.

2008-11-29  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/static_uprobes.exp: Simplified pass/fail messages.

2008-11-28  Frank Ch. Eigler  <fche@elastic.org>

	PR5376.
	* parseko/twentysix: New test.

2008-11-26  Stan Cox  <scox@redhat.com>

	* systemtap.base/static_uprobes.exp: Check debuginfo static uprobes.
	* systemtap.base/static_uprobes.stp: Check debuginfo static uprobes.

2008-11-21  Frank Ch. Eigler  <fche@elastic.org>

	PR5689.
	* systemtap.base/skipped.exp: New test.

2008-11-19  Jim Keniston  <jkenisto@us.ibm.com>

	* systemtap.context/num_args.stp: Added s390x case.

2008-11-18  Frank Ch. Eigler  <fche@elastic.org>

	PR6925.
	* systemtap.base/cmd_parse.exp: Add --vp test.

2008-11-11  Stan Cox  <scox@redhat.com>

	* systemtap.base/static_uprobes.exp: New file.
	* systemtap.base/static_uprobes.stp: New file.

2008-11-13  Mark Wielaard  <mjw@redhat.com>

	* systemtap.base/bz6850.exp: Pick up the stap being tested when
	executing under sudo.
	* systemtap.base/uprobes.exp: Likewise.

2008-11-12  Frank Ch. Eigler  <fche@elastic.org>

	PR6964.
	* systemtap.base/cmd_parse.exp: Remove exit() hack.

2008-11-12  David Smith  <dsmith@redhat.com>

	* systemtap.context/num_args.tcl: Improved error handling of
	testcase.

2008-11-03  Wenji Huang  <wenji.huang@oracle.com>

	* systemtap.base/cmd_parse.exp: Add exit() to probe.

2008-10-29  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/vars.exp: Remove "2>&1" that left turds behind.

2008-10-28  Frank Ch. Eigler  <fche@elastic.org>

	From Srikar Dronamraju <srikar@linux.vnet.ibm.com>:
	* systemtap.base/bz5274.*: New tests.

2008-10-28  David Smith  <dsmith@redhat.com>

	* buildok/vfs_testcase.stp: Fixes for updated vfs tapset.

2008-10-28  Wenji Huang  <wenji.huang@oracle.com>

	* buildok/context_test.stp: Correct for 2.6.28.
	* buildok/ioblock_test.stp: Ditto.
