@@ -1,3 +1,7 @@
+2008-12-02  Wenji Huang  <wenji.huang@oracle.com>
+	PR7053.
+	* systemtap.base/global_stat.exp: New test.
+
 2008-11-29  Frank Ch. Eigler  <fche@elastic.org>
 
 	* systemtap.base/uprobes.exp: Simplify -p5 test.
